crates/strider-analyze/tests/snapshots/v2__aarch64__calling_convention__sink8.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[7] ← w7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[6] ← w6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[5] ← w5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[4] ← w4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="arg[2] ← w2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
